# piconumpy

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
bench/: Makefile  bench.jl  bench_array1d.py  bench_cpy_vs_hpy.py  make_bench_piconumpy.py  profile_piconumpy.py
bench/microbench_loop_sum/: Makefile  README.md  bench.jl  bench.py  bench_cort.jl
bench/microbench_low_level/: Makefile  README.md  bench.jl  bench.py  bench_init_zeros.jl  bench_sum_loop_index.jl  result_cort.md  result_init_zeros.md  result_sum_loop.md  result_sum_loop_index.md
bench/simple_purepy/: Makefile  array_with_list.py  bench.jl  bench.py  profile_array_classes.py
bench/without_numpy/: julia_callback.jl  purepython_callback.py
piconumpy/: __init__.py  _piconumpy_cpython_capi.c  _piconumpy_cython.pyx  _piconumpy_hpy.c  bench.py  purepy.py  purepy_array.py  test.py  test_cpython_capi.py  test_cython.py  test_hpy.py  test_hpy_cpy_abi.py  test_hpy_universal.py  test_purepy.py  test_purepy_array.py  util_hpy.py
